--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <!-- header section -->
     <header>
         <nav>
-            <h3>G3 Architects</h3>
+            <h3 class="nav-title">G3 Architects</h3>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -18,6 +18,19 @@
                 <li><a href="#">Login</a></li>
             </ul>
         </nav>
+        <!-- banner section -->
+        <div class="banner">
+            <div class="banner-details">
+                <h1 class="banner-headline">
+                    Brand New Group of Architects
+                </h1>
+                <p class="banner-description">
+                    There are many variations of passages of lorem Ispum available, but the majority have suffered in some form, by injected humour, or randomised words which don;t look even
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="./images/banner.png" alt="">
+        </div>
     </header>
     <main>
 
