--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Login</a></li>
             </ul>
         </nav>
-        <!-- banner section -->
+        <!-- banner section  start-->
         <div class="banner">
             <div class="banner-details">
                 <h1 class="banner-headline">
@@ -32,8 +32,24 @@
             <img src="./images/banner.png" alt="">
         </div>
     </header>
+    <!-- header section end -->
     <main>
-
+            <!-- features team section start -->
+            <section class="teams-container">
+                <div class="teams-image-container">
+                    <img src="./images/team1.png" alt="">
+                    <img src="./images/team2.png" alt="">
+                    <img src="./images/team3.png" alt="">
+                    <img src="./images/team4.png" alt="">
+                </div>
+                <div class="teams-content">
+                    <h3 class="teams-content-heading"><span class="first-descr">Quick list</span> <span class="second-descr">of Our</span> <span class="third-descr">Feature</span></h3>
+                    <p class="teams-content-description">
+                        There are many variations of passages of lorem Ispum available, but the majority have suffered in some form, by injected humour, or randomised words which don;t look even
+                    </p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+            </section>
     </main>
     <footer>
 
