--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1 class="banner-headline">
                     Brand New Group of Architects
                 </h1>
-                <p class="banner-description">
+                <p class="text-light-gray">
                     There are many variations of passages of lorem Ispum available, but the majority have suffered in some form, by injected humour, or randomised words which don;t look even
                 </p>
                 <button class="btn-primary">Explore More</button>
@@ -43,8 +43,8 @@
                     <img src="./images/team4.png" alt="">
                 </div>
                 <div class="teams-content">
-                    <h3 class="teams-content-heading"><span class="first-descr">Quick list</span> <span class="second-descr">of Our</span> <span class="third-descr">Feature</span></h3>
-                    <p class="teams-content-description">
+                    <h3 class="teams-content-heading text-light-gray"><span class="first-descr">Quick list</span> <span class="second-descr">of Our</span> <span class="third-descr">Feature</span></h3>
+                    <p class="text-light-gray">
                         There are many variations of passages of lorem Ispum available, but the majority have suffered in some form, by injected humour, or randomised words which don;t look even
                     </p>
                     <button class="btn-primary">Explore More</button>
