--- a/index.html
+++ b/index.html
@@ -82,9 +82,22 @@
                         </div>
                     </div>
             </section>
+                        <!-- sponsors section  -->
+            <section class="sponsors">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">
+                    There are many variations of passages of lorem Ispum available, but the majority have suffered alternation.</p>
+                    <div class="sponsors-img-container">
+                        <img src="./images/sponsors/spotify.png" alt="">
+                        <img src="./images/sponsors/amazon.png" alt="">
+                        <img src="./images/sponsors/google.png" alt="">
+                        <img src="./images/sponsors/telerama.png" alt="">
+                        <img src="./images/sponsors/figma.png" alt="">
+                    </div>
+            </section>
     </main>
     <footer>
-
+        <small>Copyright © John Doe 2023. All rights reserved.</small>
     </footer>
 </body>
 </html>
